Atualizar style.css

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Decodificador</title>
+    <title>Encriptador</title>
 </head>
 <body>
+    <header>
+        <img class="logo_alura" src="img/Frame 6.png" alt="Logo Alura">
+    </header>
 
 
     <main class="container__main">
@@ -21,7 +24,7 @@
                 <label for="input-texto">Digite apenas letras minusculas e sem acento</label>
             </div>
             <div class="container__button">
-                <button onclick="btnCriptografar()" class="btn__criptografar" >Criptografar</button>
+                <button onclick="btnCriptografar()" c class="btn__criptografar" >Criptografar</button>
                 <button class="btn__descriptografar">Descriptografar</button>
             </div>
         </section>
